owner controllers and error debugging

--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,2 +1,3 @@
-MONGODB_URI="mongodb+srv://patilharshalvijay98:9OEGX1hoRQuzXh1L@cluster0.d4yoj3v.mongodb.net/PayingGuest"
+MONGODB_URI="mongodb+srv://patilharshalvijay98:hAKFCbW8VjLiBDaP@cluster0.xijic.mongodb.net/Cluster0"
 PORT=8000
+PASSWORD= hAKFCbW8VjLiBDaP
