--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -1,4 +1,4 @@
-{
+    {
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
