auth controllers update

--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,3 +1,4 @@
 MONGODB_URI="mongodb+srv://patilharshalvijay98:hAKFCbW8VjLiBDaP@cluster0.xijic.mongodb.net/PayingGuest?retryWrites=true&w=majority"
 PORT=8000
 PASSWORD= hAKFCbW8VjLiBDaP
+JWT_SECRET = "mySecret"
